--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,10 +3,6 @@ unbind C-b
 set-option -g prefix C-a
 bind-key C-a send-prefix
 
-set -g base-index 1
-
-set -g pane-base-index 1
-
 # split panes using | and -
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
@@ -14,6 +10,7 @@ unbind '"'
 unbind %
 
 # switch panes using Alt-arrow without prefix
+# i actually don't know what this achieves ngl
 bind -r h select-pane -L
 bind -r j select-pane -D
 bind -r k select-pane -U
@@ -21,7 +18,6 @@ bind -r l select-pane -R
 
 # enable mouse (for scrolling terminal history etc)
 set -g mouse on
-
 
 # reload config file (change file location to your the tmux.conf you want to use)
 bind r source-file ~/.tmux.conf
@@ -32,11 +28,38 @@ set -g base-index 1
 setw -g pane-base-index 1
 set-window-option -g mode-keys vi
 
-# for some reason going into normal mode in vim has delay. fix:
+# fix for vim mode switch delay
 set -sg escape-time 0
 
+# increase history limit
+set -g history-limit 50000
+
+# display time for tmux messages
+set -g display-time 4000
+
+
+# Next 3 are for interacting within terminal mostly
+# remember C-a [ to enter this mode
+# start selecting text with "v"
+bind-key -T copy-mode-vi 'v' send -X begin-selection
+# copy text with "y"
+bind-key -T copy-mode-vi 'y' send -X copy-selection
+# don't exit copy mode when dragging with mouse
+unbind -T copy-mode-vi MouseDragEnd1Pane
+
+# tmux plugins
+set -g @plugin 'tmux-plugins/tpm' # C-a I to install newly added plugins
+set -g @plugin 'tmux-plugins/tmux-resurrect' # keep sessions live across restarts n stuff!!
+set -g @plugin 'tmux-plugins/tmux-continuum' # auto-save for resurrect
+set -g @plugin 'egel/tmux-gruvbox' # theme
+
+# plugin settings
+set -g @resurrect-capture-pane-contents 'on'
+set -g @continuum-restore 'on'
+set -g @tmux-gruvbox 'dark'
+
 # set default terminal mode to 256 colors
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
 #set -g default-terminal "xterm-256color"
 set -ga terminal-overrides ",xterm-256color:Tc"
 #present a menu of URLs to open from the visible pane. sweet.
@@ -44,3 +67,5 @@ set -ga terminal-overrides ",xterm-256color:Tc"
 #    save-buffer /tmp/tmux-buffer ;\
 #    split-window -l 10 "urlview /tmp/tmux-buffer"
 
+# init Tmux Plugin Manager (has to be at end of the file)
+run '~/.tmux/plugins/tpm/tpm'
