couple of things..

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,17 +4,17 @@ set-option -g prefix C-a
 bind-key C-a send-prefix
 
 # split panes using | and -
-bind | split-window -h -c "#{pane_current_path}"
-bind - split-window -v -c "#{pane_current_path}"
 unbind '"'
 unbind %
+bind | split-window -h -c "#{pane_current_path}"
+bind - split-window -v -c "#{pane_current_path}"
 
 # switch panes using Alt-arrow without prefix
 # i actually don't know what this achieves ngl
-bind -r h select-pane -L
-bind -r j select-pane -D
-bind -r k select-pane -U
-bind -r l select-pane -R
+bind h select-pane -L
+bind j select-pane -D
+bind k select-pane -U
+bind l select-pane -R
 
 # enable mouse (for scrolling terminal history etc)
 set -g mouse on
